# codecontests-repo

./: .gitattributes  .gitignore  .pre-commit-config-custom.yaml  .pre-commit-config.yaml  .ruff.toml  CLAUDE.md  INSTRUCTIONS.md  OLD_AGENT_PLAN.md  PLAN.md  README.md  cluster0_comparison_metrics.json  cluster1_comparison_metrics.json  cluster2_comparison_metrics.json  cluster3_comparison_metrics.json  cluster4_comparison_metrics.json  cluster5_comparison_metrics.json  cluster6_comparison_metrics.json  cluster7_comparison_metrics.json  cluster_evaluation_summary.md  evaluate_clusters.sh  prevent_test_edits.py  pyproject.toml  pyrightconfig.json  run_cluster_tests.sh
data/: clusters.json
problems/1003_e_tree_constructing_1049/: PROBLEM.md  main.py  run.sh  tags.txt
problems/1009_d_relatively_prime_graph_2300/: PROBLEM.md  main.py  run.sh  tags.txt
problems/1012_b_chemical_table_214/: PROBLEM.md  main.py  run.sh  tags.txt
problems/1027_d_mouse_hunt_1364/: PROBLEM.md  main.py  run.sh
problems/1037_e_trips_7/: PROBLEM.md  main.py  run.sh
problems/1060_a_phone_numbers_8/: main.py  (+2 more)
results/: cluster_0_results.txt  cluster_1_results.txt  cluster_2_results.txt  cluster_3_results.txt  cluster_4_results.txt  cluster_5_results.txt  cluster_6_results.txt  cluster_7_results.txt
scripts/: PARALLEL_SCRIPT_README.md  claude_codex_compression.sh  claude_compression.sh  claude_compression_parallel.sh  codex_compression.sh  codex_compression_parallel.sh  run_template.sh  score_cluster.py  scores_clusters.sh  strip_clusters.py
test/: validate_models.py
tools/: __init__.py
(+18438 files in other folders)
