[project]
name = "codecontests-repo"
version = "0.1.0"
description = "Shared library for code_contests problems to minimize the total code required"
readme = "README.md"
authors = [
    { name = "justinchiu-cohere", email = "justinchiu@cohere.com" }
]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0.0",
    "requests>=2.0.0",
    "pytest>=7.0.0",
    "numpy>=1.22.0",
    "tqdm>=4.0.0",
    "datasets>=2.18.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Define the main package - this is crucial for proper importing
[tool.hatch.build]
packages = ["library"]

# Make the repository root the package root
[tool.hatch.build.targets.wheel]
packages = ["library"]

# Specify that the `library` directory should be treated as a package
[tool.hatch.build.sources]
"library" = "library"

# Set the Python path to include the repo root
[tool.hatch.envs.default]
path = "."
python-path = ["."]
dependencies = [
    "pytest>=7.0.0",
    "ruff>=0.0.54",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[tool.pytest]
testpaths = ["tests"]
python_files = "test_*.py"
pythonpath = ["."]

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "B", "I"]

[project.optional-dependencies]
dev = [
    "ruff>=0.0.54",
    "black>=23.0.0",
    "mypy>=1.0.0",
]
